# Cpp-Math-Utils-Test-Generator

./: CMakeLists.txt  README.md
src/: math_utils.cpp  math_utils.h
tests/: math_utils_test.cpp
